tests/snapshots/state_snapshots__command_history.snap
---
source: tests/state_snapshots.rs
expression: s
---
VIEWS                      │┏Artists━━━━━━━━━━━━━━━┓┌Albums────────────────────┐┌Tracks────────────────────────────────┐
›   1 Artists              │┃▸ 40mP                ┃│Cosmic                    ││▸  1 Song1 — 40mP          24bit-96kHz│
›   2 Playlists            │┃  DECO*27             ┃│                          ││                                      │
›   3 Queue                │┃                      ┃│                          ││                                      │
›   4 YouTube              │┃                      ┃│                          ││                                      │
────────────────────────   │┃                      ┃│                          ││                                      │
DISCOVER                   │┃                      ┃│                          ││                                      │
♫   H Home                 │┃                      ┃│                          ││                                      │
✦   S Discover             │┃                      ┃│                          ││                                      │
◎ :radio Radio             │┃                      ┃│                          ││                                      │
◆ :gen Generator           │┃                      ┃│                          ││                                      │
────────────────────────   │┃                      ┃│                          ││                                      │
TOOLS                      │┃                      ┃│                          ││                                      │
/   / Search               │┃                      ┃│                          ││                                      │
!   D Diagnostics          │┃                      ┃│                          ││                                      │
?   ? Help                 │┃                      ┃│                          ││                                      │
                           │┃                      ┃│                          ││                                      │
                           │┃                      ┃│                          ││                                      │
                           │┃                      ┃│                          ││                                      │
                           │┃                      ┃│                          ││                                      │
                           │┗━━━━━━━━━━━━━━━━━━━━━━┛└──────────────────────────┘└──────────────────────────────────────┘
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
[STOPPED] ■ — nothing playing —  --:-- / --:--  ▸ Enter to play  --  PREF local · CONT off · SHUF off · RPT off
::queue_
