tests/snapshots/state_snapshots__confirmation.snap
---
source: tests/state_snapshots.rs
expression: s
---
VIEWS                      │┏Artists━━━━━━━━━━━━━━━┓┌Albums────────────────────┐┌Tracks────────────────────────────────┐
›   1 Artists              │┃▸ 40mP                ┃│Cosmic                    ││▸  1 Song1 — 40mP          24bit-96kHz│
›   2 Playlists            │┃  DECO*27             ┃│                          ││                                      │
›   3 Queue                │┃                      ┃│                          ││                                      │
›   4 YouTube              │┃                      ┃│                          ││                                      │
────────────────────────   │┃                      ┃│                          ││                                      │
DISCOVER                   │┃ ┌ add "Song1 — 40mP" to playlist · Enter confirm ──────────┐                             │
♫   H Home                 │┃ │+ new playlist...                                         │                             │
✦   S Discover             │┃ │                                                          │                             │
◎ :radio Radio             │┗━│                                                          │─────────────────────────────┘
──────────────────────────────│                                                          │──────────────────────────────
╭─ NOW PLAYING ───────────────│                                                          │─────────────────────────────╮
│— nothing playing —          │                                                          │                             │
│                             │                                                          │                             │
│                             │                                                          │                             │
│                             │                                                          │                             │
│■ STOPPED                    │                                                          │                             │
│--:--  ──────────────────────└──────────────────────────────────────────────────────────┘                             │
│[←] Previous   [Space] Play   [→] Next   Vol 70% ▰▰▰▰▰▰▰▱▱▱                                                           │
│LOCAL                                                                                                                 │
│Shuffle: Off   Repeat: Off   Continue: Off                                                                            │
│Up next: Nothing queued                                                                                               │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
VIEW: local · SOURCE: local [Y —]
