tests/snapshots/state_snapshots__local_empty.snap
---
source: tests/state_snapshots.rs
expression: s
---
VIEWS                      │┏Artists━━━━━━━━━━━━━━━┓┌Albums────────────────────┐┌Tracks────────────────────────────────┐
›   1 Artists              │┃no artists — run `juke┃│                          ││                                      │
›   2 Playlists            │┃                      ┃│                          ││                                      │
›   3 Queue                │┃                      ┃│                          ││                                      │
›   4 YouTube              │┃                      ┃│                          ││                                      │
────────────────────────   │┃                      ┃│                          ││                                      │
DISCOVER                   │┃                      ┃│                          ││                                      │
♫   H Home                 │┃                      ┃│                          ││                                      │
✦   S Discover             │┃                      ┃│                          ││                                      │
◎ :radio Radio             │┗━━━━━━━━━━━━━━━━━━━━━━┛└──────────────────────────┘└──────────────────────────────────────┘
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
╭─ NOW PLAYING ────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│— nothing playing —                                                                                                   │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│■ STOPPED                                                                                                             │
│--:--  ────────────────────────────────────────────────────────────  --:--                                            │
│[←] Previous   [Space] Play   [→] Next   Vol 70% ▰▰▰▰▰▰▰▱▱▱                                                           │
│LOCAL                                                                                                                 │
│Shuffle: Off   Repeat: Off   Continue: Off                                                                            │
│Up next: Nothing queued                                                                                               │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
VIEW: local · SOURCE: local [Y —]
