tests/snapshots/state_snapshots__local_populated.snap
---
source: tests/state_snapshots.rs
expression: s
---
1   ┏Artists━━━━━━━━━━━━━━━┓┌Albums────────────────────┐┌Tracks────────────────────────────────────────────────────────┐
2   ┃40mP                  ┃│Cosmic                    ││▸  1 Song1 — Cosmic                                24bit-96kHz│
3   ┃DECO*27               ┃│                          ││                                                              │
4   ┃                      ┃│                          ││                                                              │
    ┃                      ┃│                          ││                                                              │
    ┃                      ┃│                          ││                                                              │
    ┃                      ┃│                          ││                                                              │
    ┃                      ┃│                          ││                                                              │
    ┃                      ┃│                          ││                                                              │
    ┃                      ┃│                          ││                                                              │
    ┃                      ┃│                          ││                                                              │
    ┃                      ┃│                          ││                                                              │
    ┃                      ┃│                          ││                                                              │
    ┃                      ┃│                          ││                                                              │
    ┃                      ┃│                          ││                                                              │
    ┃                      ┃│                          ││                                                              │
    ┃                      ┃│                          ││                                                              │
    ┃                      ┃│                          ││                                                              │
    ┃                      ┃│                          ││                                                              │
    ┃                      ┃│                          ││                                                              │
    ┗━━━━━━━━━━━━━━━━━━━━━━┛└──────────────────────────┘└──────────────────────────────────────────────────────────────┘
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
[STOPPED] ■ — nothing playing —  --:-- / --:--  ▸ Enter to play  --  MODE local · CONT off · SHUF off · RPT off
VIEW: local · SOURCE: local
