tests/snapshots/state_snapshots__lyrics_available.snap
---
source: tests/state_snapshots.rs
expression: s
---


            ┌ Lyrics — embedded (synced) ──────────────────────────────────────────────────────────────────┐
            │ ▸ [0:00] First line                                                                          │
            │ [0:05] Second line                                                                           │
            │                                                                                              │
            │                                                                                              │
            │                                                                                              │
            │                                                                                              │
            │                                                                                              │
            │                                                                                              │
            │                                                                                              │
            │                                                                                              │
            │                                                                                              │
            │                                                                                              │
            │                                                                                              │
            │                                                                                              │
            │                                    Esc close · j/k scroll                                    │
            └──────────────────────────────────────────────────────────────────────────────────────────────┘


────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
[STOPPED] ■ — nothing playing —  --:-- / --:--  ▸ Enter to play  --  MODE local · CONT off · SHUF off · RPT off
VIEW: local · SOURCE: local
