tests/snapshots/state_snapshots__lyrics_loading.snap
---
source: tests/state_snapshots.rs
expression: s
---


            ┌ Lyrics — loading… ───────────────────────────────────────────────────────────────────────────┐
            │ Loading lyrics…                                                                              │
            │                                                                                              │
            │ (reading from local tags / sidecar / youtube)                                                │
            │                                                                                              │
            │                                                                                              │
            │                                                                                              │
            │                                                                                              │
            │                                                                                              │
            │                                                                                              │
            │                                                                                              │
            │                                                                                              │
            │                                                                                              │
            │                                                                                              │
            │                                                                                              │
            │                                    Esc close · j/k scroll                                    │
            └──────────────────────────────────────────────────────────────────────────────────────────────┘


────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
[STOPPED] ■ — nothing playing —  --:-- / --:--  ▸ Enter to play  --  MODE local · CONT off · SHUF off · RPT off
VIEW: local · SOURCE: local
