tests/snapshots/state_snapshots__lyrics_unavailable.snap
---
source: tests/state_snapshots.rs
expression: s
---


            ┌ Lyrics — not found ──────────────────────────────────────────────────────────────────────────┐
            │ No lyrics found for this track.                                                              │
            │                                                                                              │
            │ R retry lyrics for this track  ·  L or Esc close                                             │
            │                                                                                              │
            │                                                                                              │
            │                                                                                              │
            │                                                                                              │
            │                                                                                              │
            │                                                                                              │
            │                                                                                              │
            │                                                                                              │
            │                                                                                              │
            │                                                                                              │
            │                                                                                              │
            │                                    Esc close · j/k scroll                                    │
            └──────────────────────────────────────────────────────────────────────────────────────────────┘


────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
[STOPPED] ■ — nothing playing —  --:-- / --:--  ▸ Enter to play  --  MODE local · CONT off · SHUF off · RPT off
VIEW: local · SOURCE: local
