tests/snapshots/state_snapshots__offline_cache.snap
---
source: tests/state_snapshots.rs
expression: s
---
1   ┏YouTube [stale]━━━━━━━┓┌Tracks────────────────────────────────────────────────────────────────────────────────────┐
2   ┃> Liked Songs         ┃│offline — showing cached lists (press R to retry)                                         │
3   ┃                      ┃│                                                                                          │
4   ┃                      ┃│                                                                                          │
    ┃                      ┃│                                                                                          │
    ┃                      ┃│                                                                                          │
    ┃                      ┃│                                                                                          │
    ┃                      ┃│                                                                                          │
    ┃                      ┃│                                                                                          │
    ┃                      ┃│                                                                                          │
    ┃                      ┃│                                                                                          │
    ┃                      ┃│                                                                                          │
    ┃                      ┃│                                                                                          │
    ┃                      ┃│                                                                                          │
    ┃                      ┃│                                                                                          │
    ┃                      ┃│                                                                                          │
    ┃                      ┃│                                                                                          │
    ┃                      ┃│                                                                                          │
    ┃                      ┃│                                                                                          │
    ┃                      ┃│                                                                                          │
    ┗━━━━━━━━━━━━━━━━━━━━━━┛└──────────────────────────────────────────────────────────────────────────────────────────┘
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
[STOPPED] ■ — nothing playing —  --:-- / --:--  ▸ Enter to play  --  MODE local · YT~ · CONT off · SHUF off · RPT off
VIEW: youtube · SOURCE: local · [stale] YT: offline — showing cached (press R to retry)
