tests/snapshots/state_snapshots__provider_failure.snap
---
source: tests/state_snapshots.rs
expression: s
---
VIEWS                      │Home │ Library │ Search │ Discover │ Radio │ Explore │ Charts                  YouTube [err]
›   1 Artists              │⌕ YouTube Home
›   2 Playlists            │cold start — listening to music builds your profile
›   3 Queue                │
›   4 YouTube              │── Quick Picks ──
────────────────────────   │Tracks based on your recent listening
DISCOVER                   │▸ ♫ Song1 — 40mP
♫   H Home                 │♫ Ghost Rule — DECO*27
✦   S Discover             │
◎ :radio Radio             │                j/k navigate · Tab sections · Enter play · ? help · Esc close
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
╭─ NOW PLAYING ────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│— nothing playing —                                                                                                   │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│■ STOPPED                                                                                                             │
│--:--  ────────────────────────────────────────────────────────────  --:--                                            │
│[←] Previous   [Space] Play   [→] Next   Vol 70% ▰▰▰▰▰▰▰▱▱▱                                                           │
│LOCAL                                                                                                                 │
│Shuffle: Off   Repeat: Off   Continue: Off                                                                            │
│Up next: Nothing queued                                                                                               │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
VIEW: youtube · SOURCE: local [Y err] · [!] [err] YT: provider error — press R to retry
