tests/snapshots/state_snapshots__queue_empty.snap
---
source: tests/state_snapshots.rs
expression: s
---
1   ┏Queue━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
2   ┃                                                 ≡ Queue is empty                                                 ┃
3   ┃                                           Press e on a track to enqueue                                          ┃
4   ┃                                           1 Artists · / search · ? help                                          ┃
    ┃                                                                                                                  ┃
    ┃                                                                                                                  ┃
    ┃                                                                                                                  ┃
    ┃                                                                                                                  ┃
    ┃                                                                                                                  ┃
    ┃                                                                                                                  ┃
    ┃                                                                                                                  ┃
    ┃                                                                                                                  ┃
    ┃                                                                                                                  ┃
    ┃                                                                                                                  ┃
    ┃                                                                                                                  ┃
    ┃                                                                                                                  ┃
    ┃                                                                                                                  ┃
    ┃                                                                                                                  ┃
    ┃                                                                                                                  ┃
    ┃                                                                                                                  ┃
    ┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
[STOPPED] ■ — nothing playing —  --:-- / --:--  ▸ Enter to play  --  MODE local · CONT off
VIEW: local · SOURCE: local
