tests/snapshots/state_snapshots__queue_populated.snap
---
source: tests/state_snapshots.rs
expression: s
---
VIEWS                      │┏Queue━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
›   1 Artists              │┃# Title Artist Qual                                                                       ┃
›   2 Playlists            │┃───────────────────────────────────────────────────────────────────────────────────────── ┃
›   3 Queue (2)            │┃▸ 1 Song1                            40mP                  24bit-9…                       ┃
›   4 YouTube              │┃  2 Ghost Rule                       DECO*27               16bit-4…                       ┃
────────────────────────   │┃                                                                                          ┃
DISCOVER                   │┃                                                                                          ┃
♫   H Home                 │┃                                                                                          ┃
✦   S Discover             │┃                                                                                          ┃
◎ :radio Radio             │┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
╭─ NOW PLAYING ────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│— nothing playing —                                                                                                   │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│■ STOPPED                                                                                                             │
│--:--  ────────────────────────────────────────────────────────────  --:--                                            │
│[←] Previous   [Space] Play   [→] Next   Vol 70% ▰▰▰▰▰▰▰▱▱▱                                                           │
│LOCAL                                                                                                                 │
│Shuffle: Off   Repeat: Off   Continue: Off                                                                            │
│Up next: Song1 — 40mP                                                                                                 │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
VIEW: queue · SOURCE: local [Y —]
